fixed image alignment in about page

--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,11 @@ p {
     font-size: 30px;
     text-align: center !important;
    }
+
+   .about-img {
+    display: block;
+    margin: 0 auto;
+   }
 }
 
 .margin-topper {
